// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ButtonCounter 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "SourceSansPro_400Regular",
        },
        Object {
          "fontSize": 15,
          "letterSpacing": 5,
          "lineHeight": 19,
        },
      ]
    }
  >
    0
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "SourceSansPro_400Regular",
        },
        Object {
          "fontSize": 15,
          "letterSpacing": 5,
          "lineHeight": 19,
        },
      ]
    }
  >
    <Text />
  </Text>
</View>
`;

exports[`Test ButtonCounter 10 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "SourceSansPro_400Regular",
        },
        Object {
          "fontSize": 15,
          "letterSpacing": 5,
          "lineHeight": 19,
        },
      ]
    }
  >
    10
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "SourceSansPro_400Regular",
        },
        Object {
          "fontSize": 15,
          "letterSpacing": 5,
          "lineHeight": 19,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          undefined,
          Object {
            "fontFamily": "simple-line-icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </Text>
</View>
`;

exports[`Test ButtonCounter disabled 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "SourceSansPro_400Regular",
        },
        Array [
          Object {
            "fontSize": 15,
            "letterSpacing": 5,
            "lineHeight": 19,
          },
          Object {
            "color": "#c4c4c4",
          },
        ],
      ]
    }
  >
    0
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "SourceSansPro_400Regular",
        },
        Array [
          Object {
            "fontSize": 15,
            "letterSpacing": 5,
            "lineHeight": 19,
          },
          Object {
            "color": "#c4c4c4",
          },
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          undefined,
          Object {
            "fontFamily": "simple-line-icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </Text>
</View>
`;

exports[`Test ButtonCounter highlight 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "SourceSansPro_400Regular",
        },
        Array [
          Object {
            "fontSize": 15,
            "letterSpacing": 5,
            "lineHeight": 19,
          },
          Object {
            "color": "#2d40cc",
            "fontWeight": "800",
          },
        ],
      ]
    }
  >
    0
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "SourceSansPro_400Regular",
        },
        Array [
          Object {
            "fontSize": 15,
            "letterSpacing": 5,
            "lineHeight": 19,
          },
          Object {
            "color": "#2d40cc",
            "fontWeight": "800",
          },
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          undefined,
          Object {
            "fontFamily": "simple-line-icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </Text>
</View>
`;

exports[`Test ButtonCounter highlight 10 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "SourceSansPro_400Regular",
        },
        Array [
          Object {
            "fontSize": 15,
            "letterSpacing": 5,
            "lineHeight": 19,
          },
          Object {
            "color": "#a72b1e",
            "fontWeight": "800",
          },
        ],
      ]
    }
  >
    0
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "SourceSansPro_400Regular",
        },
        Array [
          Object {
            "fontSize": 15,
            "letterSpacing": 5,
            "lineHeight": 19,
          },
          Object {
            "color": "#a72b1e",
            "fontWeight": "800",
          },
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          undefined,
          Object {
            "fontFamily": "simple-line-icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </Text>
</View>
`;
